--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Kelsey Winkeler"
+title                    : "Joshua Neal"
 title_separator          : "-"
-name                     : &name "Kelsey Winkeler"
-description              : &description "Kelsey Winkeler - Clinical Psychology PhD Student at Fralin Biomedical Research Institute at Virginia Tech Carillion"
-url                      : https://kelsey-winkeler.github.io # the base hostname & protocol for your site e.g. "https://kelsey-winkeler.github.io"
+name                     : &name "Joshua Neal"
+description              : &description "Joshua Neal - Clinical Psychology PhD Student at Virginia Tech"
+url                      : https://joshnneal.github.io # the base hostname & protocol for your site e.g. "https://kelsey-winkeler.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "kelsey-winkeler/kelsey-winkeler.github.io"
+repository               : "joshnneal/kelsey-winkeler.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kelsey Winkeler"
-  avatar           : "Untitled.png"
-  bio              : "Grad student, clinician, and dog fanatic."
-  location         : "Roanoke, Virginia"
-  employer         : #"Fralin Biomedical Research Institute"
+  name             : "Joshua Neal"
+  avatar           : #"Untitled.png"
+  bio              : "Grad student & clinician."
+  location         : "Blacksburg, Virginia"
+  employer         : #"Virginia Polytechnic Institute and State University"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9LwogW0AAAAJ&hl=en&oi=ao"
-  email            : "kwinkeler@vt.edu"
+  email            : "jneal96@vt.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "kelsey-winkeler"
+  github           : "joshnneal"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@kelsey_winkeler"
+  twitter          : "@joshnneal"
   vine             :
   weibo            :
   xing             :
