--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Joshua Neal"
-  avatar           : #"Untitled.png"
+  avatar           : "TJVD71TL4-UJVTR24UV-e7b0181551db-512.jpg"
   bio              : "Grad student & clinician."
   location         : "Blacksburg, Virginia"
   employer         : #"Virginia Polytechnic Institute and State University"
